<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="tools.certification.latency.auto.ui.settings.data.SpeakerMode" />

        <variable
            name="viewModel"
            type="tools.certification.latency.auto.ui.settings.viewmodel.SettingsViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".view.SpeakerScreen">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/optionView"
            android:gravity="center"
            android:orientation="vertical"
            tools:context=".view.SpeakerScreen">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:title="@string/selected_utterance"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/speechList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/menu_utterance"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/menuList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/optionView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:gravity="start">

                <Spinner
                    android:id="@+id/spMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/swRepeat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/repeat"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:thumbTint="#AFA9A9" />

                <LinearLayout
                    android:id="@+id/repeatView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:visibility="invisible">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/time"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvRepeatSub"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/sub"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="26sp" />

                    <TextView
                        android:id="@+id/tvRepeatDelay"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvRepeatPlus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/add"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="26sp" />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="5dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/volume"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvVolume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="sans-serif-black"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:hideIf="@{viewModel.mode == `volume`}" />

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    app:showIf="@{viewModel.mode == `volume`}">

                    <TextView
                        android:id="@+id/tvVolumeFrom"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-black"
                        android:text="10"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:text="@string/to"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvVolumeTo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-black"
                        android:text="100"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.slider.RangeSlider
                    android:id="@+id/volumeSlider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stepSize="1"
                    android:valueFrom="10"
                    android:valueTo="100"
                    app:showIf="@{viewModel.mode == `volume`}" />

                <SeekBar
                    android:id="@+id/volumeBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:min="10"
                    android:progress="75"
                    android:theme="@style/SeekbarTheme"
                    app:hideIf="@{viewModel.mode == `volume`}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/spNoise"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tvNoise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="sans-serif-black"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:hideIf="@{viewModel.mode == `noise`}" />

                <LinearLayout
                    android:id="@+id/noiseRange"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    app:showIf="@{viewModel.mode == `noise`}">

                    <TextView
                        android:id="@+id/tvNoiseFrom"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-black"
                        android:text="0"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:text="@string/to"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvNoiseTo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-black"
                        android:text="100"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.slider.RangeSlider
                    android:id="@+id/noiseSlider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stepSize="1"
                    android:valueFrom="0"
                    android:valueTo="100"
                    app:showIf="@{viewModel.mode == `noise`}" />

                <SeekBar
                    android:id="@+id/noiseBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:min="0"
                    android:progress="75"
                    android:theme="@style/SeekbarTheme"
                    app:hideIf="@{viewModel.mode == `noise`}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btnReset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/reset" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ToggleButton
                        android:id="@+id/toggleButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:checked="true"
                        android:textOff="@string/stop"
                        android:textOn="@string/test" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btnPlay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/play" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>
